Time: 27 ms (51.04%) | Memory: 56.2 MB (64.27%) - LeetSync